main.js editado para POO

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <td><input type="text" name="email" id="email"></td>
                 </tr>
                 <tr><td><br></td></tr>
-                <tr><td><button type="submit" id="save" value="guardar">Guardar</button></td></tr>
+                <tr><td><button id="save" value="guardar">Guardar</button></td></tr>
                 </form>
             </table>
 
@@ -64,8 +64,8 @@
                 </tr>
                 <tr><td><br></td></tr>
                 <tr>
-                    <td><button type="submit" id="edit" value="editar">Editar</button></td>
-                    <td><button type="submit" id="borrar">Borrar</button></td>
+                    <td><button id="edit" value="editar">Editar</button></td>
+                    <td><button id="borrar">Borrar</button></td>
                 </tr>
                 </form>
             </table>
